plugins {
    id 'java-library'
    id 'io.qameta.allure' version '2.11.2'  // Подключение аллюр отчета и его версии

}


allure {
    report { //секция репорта
        version.set("2.24.0") // https://github.com/allure-framework/allure2
    }
    adapter { // отвечает за появление папочки build/allure-results
        aspectjWeaver.set(true) //обработка аннотации @Step
        frameworks {
            junit5 { //название фреймворка
                adapterVersion.set("2.24.0") //https://github.com/allure-framework/allure-java
            }
        }
    }

}


repositories {
    mavenCentral()
}

dependencies {
    testImplementation(
            "com.codeborne:selenide:7.4.3",
            "com.github.javafaker:javafaker:1.0.2",
            "org.junit.jupiter:junit-jupiter:5.10.2",
            'com.codeborne:pdf-test:1.5.0',
            'com.codeborne:xls-test:1.4.3',
            'com.opencsv:opencsv:5.9',
            'com.fasterxml.jackson.core:jackson-core:2.17.1',
            'com.fasterxml.jackson.core:jackson-databind:2.17.1',
            'io.qameta.allure:allure-selenide:2.24.0',
            'io.github.bonigarcia:webdrivermanager:5.9.2',
            'org.slf4j:slf4j-simple:2.0.13',
            'org.aspectj:aspectjweaver:1.9.22.1'
    )

}
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

test {
    useJUnitPlatform()
    systemProperties(System.getProperties())
    jvmArgs = ["-XX:+EnableDynamicAgentLoading"]

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

task homealfa(type: Test) {
    useJUnitPlatform {
        includeTags("alfahome")
    }
    jvmArgs = ["-XX:+EnableDynamicAgentLoading"]
}